--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona Główna :: StormRP</title>
+    <meta property="og:title" content="StormRP - Serwer Roleplay">
+    <meta property="og:description" content="Wejdź do świata, który żyje własnym rytmem. Na StormRP każda decyzja i każda interakcja kryją potencjał na niezapomnianą historię.">
+    <meta property="og:image" content="https://i.imgur.com/SHqt9G7.png">
+    <meta property="og:url" content="http://stormrp.eu">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#00A3FF">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
