--- a/regulamin.html
+++ b/regulamin.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regulamin :: StormRP</title>
+    <meta property="og:title" content="StormRP :: Regulamin">
+    <meta property="og:description" content="Wejdź do świata, który żyje własnym rytmem. Na StormRP każda decyzja i każda interakcja kryją potencjał na niezapomnianą historię.">
+    <meta property="og:image" content="assets/logo.png">
+    <meta property="og:url" content="http://stormrp.eu">
+    <meta property="og:type" content="website">
+    <meta name="theme-color" content="#00A3FF">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="assets/logo.png" type="image/png">
